--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ Downloading Jenkins repo:
 ---------------------------
 sudo wget -O /etc/yum.repos.d/jenkins.repo https://pkg.jenkins.io/redhat-stable/jenkins.repo
 sudo rpm --import https://pkg.jenkins.io/redhat-stable/jenkins.io.key
-amazon-linux-extras install epel -y
+amazon-linux-extras installsekharyadav -y
 
 yum update -y
 
